added jpackage configuration. generated app-image size is 42,3Mb, not bad